<resources>
    <string name="app_name">Minecraft图形粒子</string>
    <string name="toolbar_title_particle">绘制</string>
    <string name="toolbar_title_save">保存</string>
    <string name="toolbar_title_about">关于</string>
    <string name="toolbar_title_tutorial">使用教程</string>
    <string name="toolbar_title_draw">绘制</string>
    <string name="action_particle">绘制</string>
    <string name="action_save">保存</string>
    <string name="action_about">关于</string>
    <string name="action_reset">重置</string>
    <string name="draw_category_regular">规则图形</string>
    <string name="draw_category_line">曲直线</string>
    <string name="draw_category_math">数学</string>
    <string name="draw_category_special">特殊</string>
    <string name="type_circle">正圆</string>
    <string name="type_ellipse">椭圆</string>
    <string name="type_polygon">多边形</string>
    <string name="type_star">星形</string>
    <string name="type_sphere">球体</string>
    <string name="type_line">直线</string>
    <string name="type_parabola">抛物线</string>
    <string name="type_helix">螺旋线</string>
    <string name="type_spiralparabola">螺旋抛物线</string>
    <string name="type_arc">圆弧</string>
    <string name="type_fourier">傅里叶级数</string>
    <string name="type_function">函数</string>
    <string name="type_image">图片</string>
    <string name="description_circle">平面上所有与给定点（圆心）距离相等的点的集合。</string>
    <string name="description_ellipse">平面上所有满足到两个固定点（焦点）的距离之和为常数的点的集合。</string>
    <string name="description_polygon">由有限条线段依次首尾相接围成的封闭平面图形。</string>
    <string name="description_star">一种特殊的多边形，其顶点按照某种规则排列，使得部分边相交。</string>
    <string name="description_sphere">空间中所有与给定点（球心）距离相等的点的集合。</string>
    <string name="description_line">在欧几里得几何中，直线是无限延伸的、没有宽度的一维图形。</string>
    <string name="description_parabola">平面上所有与一个固定点（焦点）和一条固定直线（准线）距离相等的点的集合。</string>
    <string name="description_helix">一个动点沿直线作匀速直线运动，同时又以等角速度绕同平面的轴线旋转，其轨迹形成一条空间曲线。</string>
    <string name="description_spiralparabola">一个动点沿抛物线轨迹运动，同时又以等角速度绕同平面的轴线旋转，其轨迹形成一条空间曲线。</string>
    <string name="description_arc">圆上任意两点之间的部分。</string>
    <string name="description_fourier">将一个周期函数表示为正弦和余弦函数的无穷级数的方法。</string>
    <string name="description_function">在数学中，函数是一种关系，它将每个输入值与一个输出值相关联。</string>
    <string name="description_image">将一张图片按像素转化为粒子。</string>
    <string name="save_none_text">目前无保存项目，去绘制界面保存吧！</string>
    <string name="about_by">by</string>
    <string name="about_author">none</string>
    <string name="about_list_tutorial">使用教程</string>
    <string name="about_list_author">作者信息</string>
    <string name="about_list_update">更新内容</string>
    <string name="about_list_donate">捐赠作者</string>
    <string name="about_list_check">检查更新</string>
    <string name="dialog_title_reset">重置</string>
    <string name="dialog_title_save">保存</string>
    <string name="dialog_title_remove">移除</string>
    <string name="dialog_title_graphics_help">操作帮助</string>
    <string name="dialog_title_particle_category">粒子种类</string>
    <string name="dialog_title_function_list">可用函数列表</string>
    <string name="dialog_title_color">颜色</string>
    <string name="dialog_title_donate">捐赠</string>
    <string name="dialog_message_reset">是否确定重置，所有参数的值都将恢复默认值。</string>
    <string name="dialog_message_remove">是否移除此保存项目，这将不可恢复。</string>
    <string name="dialog_message_graphics_help">前后移动:双指放缩\n左右移动:双指平行左右移动\n上下移动:双指同一条竖直线上上下移动\n垂直旋转:单指上下移动\n水平旋转:单指左右移动\n图形坐标刷新:点击图形Tab项</string>
    <string name="dialog_draw_save_name_hint">输入保存项目名称</string>
    <string name="dialog_draw_save_name_error">名称不能为空</string>
    <string name="dialog_draw_save_width_hint">输入保存后图片宽度</string>
    <string name="dialog_draw_save_width_error">宽度输入有误</string>
    <string name="dialog_draw_save_height_hint">输入保存后图片高度</string>
    <string name="dialog_draw_save_height_error">高度输入有误</string>
    <string name="dialog_draw_save_param_error">参数输入错误</string>
    <string name="dialog_draw_save_ps">注:图片大小严重影响保存页面的加载速度</string>
    <string name="dialog_save_item_information">信息</string>
    <string name="dialog_save_item_management">管理</string>
    <string name="dialog_param_particle_category_title">粒子种类</string>
    <string name="dialog_param_particle_category_searchview_hint">搜索</string>
    <string name="dialog_param_particle_category_searchbar_hint">搜索粒子种类</string>
    <string name="dialog_param_particle_category_text">点击上方搜索栏进行搜索</string>
    <string name="dialog_colorpicker_alpha">透明度</string>
    <string name="dialog_title_update_content">更新内容</string>
    <string name="dialog_message_update_content">
        -----2025-7-05(1.5.0) \n1.新增椭圆,多边形,星形,球体,直线,抛物线,螺旋线,螺旋抛物线,圆弧,函数,傅里叶级数,图片 \n2.内置粒子种类已适配Minecraft基岩版v1.21.100.23Beta_v8a
        \n\n-----2025-2-23(1.4.0) \n1.新增图形 \n2.修复一些问题
        \n\n-----2025-2-05(1.3.2) \n1.绘制和修改界面增加副标题 \n2.保存时可调节图片的大小
        \n\n-----2025-2-05(1.3.1) \n1.解决粒子搜索栏的可滑动问题 \n2.修复全部因屏幕旋转引发的Bug \n3.保存项目的修改目前可使用了
        \n\n-----2025-1-18(1.3.0) \n修复部分因屏幕旋转引发的Bug
        \n\n-----2025-1-13(1.2-fix) \n修复安卓13及以下兼容问题
        \n\n-----2025-1-12(1.2) \n1.修复保存问题 \n2.粒子搜索更全面且排序
        \n\n-----2025-1-11(1.1) \n1.UI界面使用Material Design \n2.粒子种类支持搜索 \n3.新增"更新内容"
        \n\n-----2024-12-22(1.0) \n初始版本
    </string>
    <string name="draw_tab_param">参数</string>
    <string name="draw_tab_graphics">图形</string>
    <string name="draw_param_category_position">位置</string>
    <string name="draw_param_category_size">大小</string>
    <string name="draw_param_category_shape">形状</string>
    <string name="draw_param_category_precision">精度</string>
    <string name="draw_param_category_particle">粒子</string>
    <string name="draw_param_category_file">文件</string>
    <string name="draw_param_category_gravity">重力的方向向量</string>
    <string name="draw_param_category_node">节点</string>
    <string name="draw_param_category_function">函数</string>
    <string name="draw_param_category_x_axis">X轴的正向方向向量</string>
    <string name="draw_param_category_y_axis">Y轴的正向方向向量</string>
    <string name="draw_param_category_draw">绘制</string>
    <string name="draw_param_category_svg">SVG</string>
    <string name="draw_param_category_time">时间</string>
    <string name="draw_param_category_image">图片</string>
    <string name="draw_param_category_color">颜色</string>
    <string name="draw_param_category_width_vector">宽的方向向量</string>
    <string name="draw_param_category_height_vector">高的方向向量</string>
    <string name="draw_param_circle_coordinateX">圆心X坐标</string>
    <string name="draw_param_circle_coordinateY">圆心Y坐标</string>
    <string name="draw_param_circle_coordinateZ">圆心Z坐标</string>
    <string name="draw_param_ellipse_radiusa">输入半长轴(格)</string>
    <string name="draw_param_ellipse_radiusb">输入半短轴(格)</string>
    <string name="draw_param_star_base">输入基星形的角数(4或奇数)</string>
    <string name="draw_param_star_target">输入目标星形的角数(需为基星形角数的倍数)</string>
    <string name="draw_param_sphere_coordinateX">球心X坐标</string>
    <string name="draw_param_sphere_coordinateY">球心Y坐标</string>
    <string name="draw_param_sphere_coordinateZ">球心Z坐标</string>
    <string name="draw_param_sphere_latitude">输入纬度间隔角(度)</string>
    <string name="draw_param_sphere_longitude">输入经度间隔角(度)</string>
    <string name="draw_param_regular_coordinateX">中心X坐标</string>
    <string name="draw_param_regular_coordinateY">中心Y坐标</string>
    <string name="draw_param_regular_coordinateZ">中心Z坐标</string>
    <string name="draw_param_regular_hAngle">输入水平角(度，-180~180)</string>
    <string name="draw_param_regular_vAngle">输入竖直角(度，-90~90)</string>
    <string name="draw_param_regular_offset">输入偏移角(度)</string>
    <string name="draw_param_regular_radius">输入半径(格)</string>
    <string name="draw_param_regular_side_length">输入边长(格)</string>
    <string name="draw_param_regular_side_number">输入边数</string>
    <string name="draw_param_regular_step">输入步长(度)</string>
    <string name="draw_param_helix_radius">输入螺旋半径(格)</string>
    <string name="draw_param_helix_distance">输入螺旋距离(格, 正负决定顺逆时针旋转)</string>
    <string name="draw_param_sprialparabola_angle_velocity">输入螺旋角速度(rad/格)</string>
    <string name="draw_param_arc_add">增加节点</string>
    <string name="draw_param_arc_radius">输入初始半径</string>
    <string name="draw_param_arc_major">初始圆弧为 优弧</string>
    <string name="draw_param_arc_minor">初始圆弧为 劣弧</string>
    <string name="draw_param_arc_step">统一步长</string>
    <string name="draw_param_line_cxs">起点X坐标</string>
    <string name="draw_param_line_cys">起点Y坐标</string>
    <string name="draw_param_line_czs">起点Z坐标</string>
    <string name="draw_param_line_cxe">终点X坐标</string>
    <string name="draw_param_line_cye">终点Y坐标</string>
    <string name="draw_param_line_cze">终点Z坐标</string>
    <string name="draw_param_line_angle_direction">输入初始方向角(度, -90~90)</string>
    <string name="draw_param_line_angle_rotation">输入初始旋转角(度, 0~360)</string>
    <string name="draw_param_line_step">输入步长(格)</string>
    <string name="draw_param_function_exp">函数表达式(y=... x为自变量)</string>
    <string name="draw_param_function_x_start">X的起点值</string>
    <string name="draw_param_function_x_end">X的终点值</string>
    <string name="draw_param_function_scale_x">输入X轴缩放</string>
    <string name="draw_param_function_scale_y">输入Y轴缩放</string>
    <string name="draw_param_function_length_x">输入X轴正或负轴长度(格)</string>
    <string name="draw_param_function_length_y">输入Y轴正或负轴长度(格)</string>
    <string name="draw_param_function_step">输入函数步长(格)</string>
    <string name="draw_param_function_step_x">输入X轴步长(格)</string>
    <string name="draw_param_function_step_y">输入Y轴步长(格)</string>
    <string name="draw_param_function_draw_x_axis_p">绘制X正轴</string>
    <string name="draw_param_function_draw_x_axis_n">绘制X负轴</string>
    <string name="draw_param_function_draw_y_axis_p">绘制Y正轴</string>
    <string name="draw_param_function_draw_y_axis_n">绘制Y负轴</string>
    <string name="draw_param_function_particle">函数粒子种类</string>
    <string name="draw_param_function_particle_x">X轴粒子种类</string>
    <string name="draw_param_function_particle_y">Y轴粒子种类</string>
    <string name="draw_param_function_view">查看可用函数</string>
    <string name="draw_param_function_list">
        -----运算符\n
        + 加法 - 减法\n
        * 乘法 / 除法\n
        ^或** 幂运算 % 取余\n\n
        -----三角函数\n
        sin(x) 正弦 cos(x) 余弦 tan(x) 正切\n
        asin(x) 反正弦 acos(x) 反余弦 atan(x) 反正切\n
        sinh(x) 双曲正弦 cosh(x) 双曲余弦 tanh(x) 双曲正切\n\n
        -----对数和指数函数\n
        log(x) 自然对数(等同于ln) log10(x) 以10为底的对数(等同于lg)\n
        exp(x) e的x次方(等同于e^x)\n\n
        -----其他函数\n
        abs(x) 绝对值\n
        sqrt(x) 平方根 cbrt(x) 立方根\n
        ceil(x) 向上取整 floor(x) 向下取整\n
        round(x) 四舍五入 signum(x) 符号函数\n
        random() 生成[0,1)的随机数\n
        min(x, y) 最小值 max(x, y) 最大值\n\n
        -----常量\n
        pi π(3.14159...)\n
        e 自然对数底(2.71828...)
    </string>
    <string name="draw_param_fourier_path">路径%d</string>
    <string name="draw_param_fourier_angle_rotation">输入旋转角(度, 0~360)</string>
    <string name="draw_param_fourier_xp">宽沿正X轴</string>
    <string name="draw_param_fourier_xn">宽沿负X轴</string>
    <string name="draw_param_fourier_zp">高沿正Z轴</string>
    <string name="draw_param_fourier_zn">高沿负Z轴</string>
    <string name="draw_param_fourier_cycle">输入周期(tick)</string>
    <string name="draw_param_fourier_scale">输入缩放</string>
    <string name="draw_param_fourier_armor_stand_number">盔甲架数量(偶数)</string>
    <string name="draw_param_fourier_point_number">拟合点数量</string>
    <string name="draw_param_fourier_armor_stand_name">输入盔甲架名称</string>
    <string name="draw_param_image_tip">若在图形预览时发生崩溃，请在下方进行适当缩放后再进入图形预览。\n目前仅支持png, jpeg, webp, svg格式图片</string>
    <string name="draw_param_image_choose_color">确定需绘制部分的颜色</string>
    <string name="draw_param_vector_x">X分量</string>
    <string name="draw_param_vector_y">Y分量</string>
    <string name="draw_param_vector_z">Z分量</string>
    <string name="draw_param_particle">输入粒子种类</string>
    <string name="draw_param_filePath">输入.mcfunction文件保存路径</string>
    <string name="draw_param_fileName">输入.mcfunction文件保存名称</string>
    <string name="draw_param_create">创建粒子函数文件</string>
</resources>